implemented jQuery for ajax call, attached to submit button of form

--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
             name="set"
             placeholder="Type in or choose from list"
         /></label>
-        <div><button>ALL CARDS</button><button>RANDOMIZER</button></div>
+        <div>
+          <button type="submit" id="allCardsBtn">ALL CARDS</button
+          ><button id="randomBtn">RANDOMIZER</button>
+        </div>
       </form>
     </header>
   </body>
