attached card name input to api call

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
       <h1>MTG CONCLAVE</h1>
       <h2>Card Searcher</h2>
       <form>
-        <label>Card Name:<input type="text" name="name" /></label>
+        <label>Card Name:<input type="text" name="name" id="nameInput"/></label>
         <label
           >Types:
           <input
             type="text"
             name="type"
+            id="typeInput"
             placeholder="Including super- and/or subtypes"
         /></label>
         <fieldset>
