refactored building query string, started logic for searching colors

--- a/index.html
+++ b/index.html
@@ -25,45 +25,45 @@
             id="typeInput"
             placeholder="Including super- and/or subtypes"
         /></label>
-        <fieldset>
+        <fieldset id="colorIdField">
           <legend>Color Identity:</legend>
           <label>
-            <input type="checkbox" name="color" value="white" />
+            <input type="checkbox" class="color" value="w" />
             White
           </label>
           <label>
-            <input type="checkbox" name="color" value="blue" />
+            <input type="checkbox" class="color" value="u" />
             Blue
           </label>
           <label>
-            <input type="checkbox" name="color" value="black" />
+            <input type="checkbox" class="color" value="b" />
             Black
           </label>
           <label>
-            <input type="checkbox" name="color" value="red" />
+            <input type="checkbox" class="color" value="r" />
             Red
           </label>
           <label>
-            <input type="checkbox" name="color" value="green" />
+            <input type="checkbox" class="color" value="g" />
             Green
           </label>
         </fieldset>
         <fieldset>
           <legend>Rarity:</legend>
           <label>
-            <input type="checkbox" name="rarity" value="common" />
+            <input type="checkbox" class="rarity" value="common" />
             Common
           </label>
           <label>
-            <input type="checkbox" name="rarity" value="uncommon" />
+            <input type="checkbox" class="rarity" value="uncommon" />
             Uncommon
           </label>
           <label>
-            <input type="checkbox" name="rarity" value="rare" />
+            <input type="checkbox" class="rarity" value="rare" />
             Rare
           </label>
           <label>
-            <input type="checkbox" name="rarity" value="mythic" />
+            <input type="checkbox" class="rarity" value="mythic" />
             Mythic Rare
           </label>
         </fieldset>
