--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
           <!-- <button id="randomBtn">RANDOMIZER</button> -->
         </div>
       </form>
-      <div id="results"></div>
+      <div id="resultBox">
+        <div class="cardSpoiler card1"></div>
+        <div class="cardSpoiler card2"></div>
+        <div class="cardSpoiler card3"></div>
+        <div class="cardSpoiler card4"></div>
+        <div class="cardSpoiler card5"></div>
+        <div class="cardSpoiler card6"></div>
+      </div>
     </header>
   </body>
 </html>
