dynamically populating result box w/ card images

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
         </div>
       </form>
       <div id="resultBox">
-        <div class="cardSpoiler card1"></div>
+        <!-- <div class="cardSpoiler card1"></div>
         <div class="cardSpoiler card2"></div>
         <div class="cardSpoiler card3"></div>
         <div class="cardSpoiler card4"></div>
         <div class="cardSpoiler card5"></div>
-        <div class="cardSpoiler card6"></div>
+        <div class="cardSpoiler card6"></div> -->
       </div>
     </header>
   </body>
