--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js" defer></script>
   </head>
   <body>
     <header>
@@ -83,16 +83,11 @@
         /></label>
         <div>
           <button type="submit" id="allCardsBtn">ALL CARDS</button>
-          <!-- <button id="randomBtn">RANDOMIZER</button> -->
+          <button id="randomBtn">RANDOMIZER</button>
         </div>
       </form>
       <div id="resultBox">
-        <!-- <div class="cardSpoiler card1"></div>
-        <div class="cardSpoiler card2"></div>
-        <div class="cardSpoiler card3"></div>
-        <div class="cardSpoiler card4"></div>
-        <div class="cardSpoiler card5"></div>
-        <div class="cardSpoiler card6"></div> -->
+
       </div>
     </header>
   </body>
