click functionality  persists thru page navigation, added detail pic

--- a/details.html
+++ b/details.html
@@ -9,9 +9,11 @@
     integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"
   ></script>
-  <script src="js/details.js"></script>
+  <script defer src="js/details.js"></script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    Card Details!
+<body id="detailPage">
+    <h1 id="cardName">Card Details</h1>
+    <div id="detailImg"></div>
 </body>
 </html>
