fixed images for double-faced card results, added both faces to details

--- a/details.html
+++ b/details.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <script
-    src="https://code.jquery.com/jquery-3.7.0.js"
-    integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-    crossorigin="anonymous"
-  ></script>
-  <script defer src="js/details.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body id="detailPage">
+      src="https://code.jquery.com/jquery-3.7.0.js"
+      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/details.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body id="detailPage">
     <h1 id="cardName">Card Details</h1>
-    <div id="detailImg"></div>
-</body>
+    <div class="displayBox"><div class="detailsImg"></div></div>
+  </body>
 </html>
