wired rarity input, fixed bug on detal page

--- a/details.html
+++ b/details.html
@@ -14,6 +14,6 @@
   </head>
   <body id="detailPage">
     <h1 id="cardName">Card Details</h1>
-    <div class="displayBox"><div class="detailsImg"></div></div>
+    <div class="displayBox"><div class="detailImg"></div></div>
   </body>
 </html>
