--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
         <fieldset>
           <legend>Rarity:</legend>
           <label>
-            <input type="checkbox" class="rarity" value="Common" />
+            <input type="checkbox" class="rarity" value="c" />
             Common
           </label>
           <label>
-            <input type="checkbox" class="rarity" value="Uncommon" />
+            <input type="checkbox" class="rarity" value="u" />
             Uncommon
           </label>
           <label>
-            <input type="checkbox" class="rarity" value="Rare" />
+            <input type="checkbox" class="rarity" value="r" />
             Rare
           </label>
           <label>
-            <input type="checkbox" class="rarity" value="Mythic" />
+            <input type="checkbox" class="rarity" value="m" />
             Mythic Rare
           </label>
         </fieldset>
