--- a/results.html
+++ b/results.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <h1>Search Results</h1>
-    <div id="resultBox"></div>
+    <div class="displayBox"></div>
   </body>
 </html>
