--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MTG Conclave</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
     <script
       src="https://code.jquery.com/jquery-3.7.0.js"
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
       crossorigin="anonymous"
     ></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/index.js" defer></script>
   </head>
@@ -74,17 +75,18 @@
         </fieldset>
         <br />
         <label
-          >Set Name:
+          >Set Code:
           <input
             type="text"
             id="setInput"
-            class="ui-autocomplete"
-            placeholder="Type in or choose from list"
         /></label>
         <label>Sort by:
           <select id="sortDropdown">
             <option value="name">Name</option>
+            <option value="set">Set & Collector #</option>
+            <option value="released">Release Date</option>
             <option value="rarity">Rarity</option>
+            <option value="color">Color</option>
             <option value="type">Type</option>
             <option value="cmc">Mana Value</option>
             <option value="power">Power</option>
