fixed bugs in allCards search

--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
       <br />
       <label
         >Sets:
-        <select id="setDropdown"></select>
+        <select id="setDropdown">
+          <option class="setOption" value="">[Select]</option>
+          <object class="setOption" value="" selected>Test</object>
+        </select>
       </label>
       <label
-        >Sort by:
+        >Sort results by:
         <select id="sortDropdown">
           <option value="name">Name</option>
           <option value="set">Set & Collector #</option>
