--- a/random.html
+++ b/random.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Randomizer - MTG Conclave</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,11 +19,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body id="detailPage">
-    <h2 id="cardName"></h2>
-    <div class="displayBox">
-      <div class="detailImg"></div>
-    </div>
-    <!-- <div class="displayBox statBox"></div> -->
+    <h1 id="cardName"></h1>
+    <div class="displayBox"><div class="detailImg"></div></div>
+    <div class="displayBox statBox"></div>
     <footer></footer>
   </body>
 </html>
