--- a/results.html
+++ b/results.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search Results - MTG Conclave</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica&family=Poiret+One&family=Uncial+Antiqua&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://code.jquery.com/jquery-3.7.0.js"
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
@@ -13,7 +19,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Search Results</h1>
+    <header>
+      <h1>Search Results</h1>
+      <p id="displayingResults"></p>
+    </header>
     <div class="displayBox"></div>
+    <footer></footer>
   </body>
 </html>
