retained Set List population through reloads

--- a/details.html
+++ b/details.html
@@ -23,7 +23,7 @@
     <div class="displayBox">
       <div class="detailImg"></div>
     </div>
-    <!-- <div class="displayBox statBox"></div> -->
+    <div class="displayBox statBox"></div>
     <footer></footer>
   </body>
 </html>
