--- a/results.html
+++ b/results.html
@@ -23,7 +23,8 @@
       <h1>Search Results</h1>
       <p id="displayingResults"></p>
     </header>
-    <div class="displayBox"></div>
+    <div class="displayBox">
+    </div>
     <footer></footer>
   </body>
 </html>
