--- a/group.html
+++ b/group.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Randomizer - MTG Conclave</title>
+    <title></title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,8 +20,7 @@
   </head>
   <body id="detailPage">
     <h1 id="cardName"></h1>
-    <div class="displayBox">
-      <div class="detailImg"></div>
+    <div class="displayBox imgBox">
     </div>
     <div class="displayBox statBox"></div>
     <footer></footer>
