update img tags in details.js

--- a/details.html
+++ b/details.html
@@ -21,7 +21,7 @@
   <body id="detailPage">
     <h2 id="cardName"></h2>
     <div class="displayBox">
-      <div class="detailImg"></div>
+      <img class="detailImg"></img>
     </div>
     <div class="displayBox statBox"></div>
     <footer></footer>
