improve css of card renders

--- a/details.html
+++ b/details.html
@@ -21,7 +21,9 @@
   <body id="detailPage">
     <h2 id="cardName"></h2>
     <div class="displayBox">
-      <img class="detailImg"></img>
+      <div class="imgContainer">
+        <img class="detailImg" />
+      </div>
     </div>
     <div class="displayBox statBox"></div>
     <footer></footer>
