--- a/random.html
+++ b/random.html
@@ -21,7 +21,9 @@
   <body id="detailPage">
     <h1 id="cardName"></h1>
     <div class="displayBox">
-      <div class="detailImg"></div>
+      <div class="imgContainer">
+        <img class="detailImg" />
+      </div>
     </div>
     <div class="displayBox statBox"></div>
     <footer></footer>
