card stats added to details page

--- a/index.html
+++ b/index.html
@@ -110,6 +110,17 @@
           <option value="toughness">Toughness</option>
         </select>
       </label>
+      <fieldset>
+        <legend>Options:</legend>
+        <label>
+          <input type="checkbox" name="newCards" id="newCardsCheckbox" />
+          New Cards Only
+        </label>
+        <label>
+          <input type="checkbox" name="includeExtras" id="includeExtrasCheckbox" />
+          Include Extras
+        </label>
+      </fieldset>
       <div class="buttonDiv">
         <button type="submit" id="allCardsBtn">All Cards</button>
         <button id="randomBtn">Randomizer!</button>
