--- a/details.html
+++ b/details.html
@@ -19,13 +19,28 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body id="detailPage">
-    <h2 id="cardName"></h2>
+    <header></header>
+    <!-- <h2 id="cardName"></h2> -->
     <div class="displayBox">
       <div class="imgContainer">
         <img class="detailImg" />
       </div>
     </div>
-    <div class="displayBox statBox"></div>
+    <div class="displayBox stat-box">
+      <table class="stat-table">
+        <tr class="mana-cost">
+          <td>Mana Cost:</td>
+        </tr>
+        <tr class="type-line">
+          <td>Card Type:</td>
+        </tr>
+        <tr class="oracle-text">
+          <td>Rules Text:</td>
+        </tr>      
+      </table>
+    </div>
+    <br/>
+    <div class="displayBox linkBox"></div>
     <footer></footer>
   </body>
 </html>
