styling of stat box

--- a/details.html
+++ b/details.html
@@ -29,13 +29,13 @@
     <div class="displayBox stat-box">
       <table class="stat-table">
         <tr class="mana-cost">
-          <td>Mana Cost:</td>
+          <td class="stat-label">Mana Cost:</td>
         </tr>
         <tr class="type-line">
-          <td>Card Type:</td>
+          <td class="stat-label">Card Type:</td>
         </tr>
         <tr class="oracle-text">
-          <td>Rules Text:</td>
+          <td class="stat-label">Rules Text:</td>
         </tr>      
       </table>
     </div>
