more styling improvements

--- a/group.html
+++ b/group.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body id="detailPage">
-    <h1 id="cardName"></h1>
+    <header></header>
+    <h3 id="cardName"></h3>
     <div class="displayBox imgBox">
     </div>
     <div class="displayBox statBox"></div>
