--- a/random.html
+++ b/random.html
@@ -19,13 +19,28 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body id="detailPage">
-    <h1 id="cardName"></h1>
+    <header></header>
+
     <div class="displayBox">
       <div class="imgContainer">
         <img class="detailImg" />
       </div>
+    </div>    
+    <h3 id="cardName"></h3>
+    <div class="displayBox stat-box">
+      <table class="stat-table">
+        <tr class="mana-cost">
+          <td class="stat-label">Mana Cost:</td>
+        </tr>
+        <tr class="type-line">
+          <td class="stat-label">Card Type:</td>
+        </tr>
+        <tr class="oracle-text">
+          <td class="stat-label">Rules Text:</td>
+        </tr>      
+      </table>
     </div>
-    <div class="displayBox statBox"></div>
+    <br/>    <div class="displayBox linkBox"></div>
     <footer></footer>
   </body>
 </html>
