fixed new formatting on random page

--- a/random.html
+++ b/random.html
@@ -20,17 +20,15 @@
   </head>
   <body id="detailPage">
     <header></header>
-
     <div class="displayBox">
       <div class="imgContainer">
         <img class="detailImg" />
       </div>
     </div>    
-    <h3 id="cardName"></h3>
+    <!-- <h3 id="cardName"></h3> -->
     <div class="displayBox stat-box">
       <table class="stat-table">
         <tr class="mana-cost">
-          <td class="stat-label">Mana Cost:</td>
         </tr>
         <tr class="type-line">
           <td class="stat-label">Card Type:</td>
