symbols now appear in details page text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <h1>MTG CONCLAVE - Card Searcher</h1>
+      <h2>MTG CONCLAVE - Card Searcher</h2>
     </header>
 
     <form>
@@ -92,7 +92,7 @@
       <br />
       <label id="setInputLabel"
         >Sets: 
-        <input type="text" id="setInput" placeholder="Full Name or Set Code">
+        <input type="text" id="setInput" placeholder="Search for full name or set code">
         <div id="setSuggestions"></div>
         <ul id="selectedSetList"></ul>
       </label>
@@ -129,7 +129,7 @@
     <p class="errorMessage"></p>
     <footer>
       <p class="copyright">
-        &copy; 2023 Jon Brennan / Powered by
+        &copy; 2024 Jon Brennan / Powered by
         <a href="https://scryfall.com/">Scryfall</a>
       </p>
     </footer>
