--- a/details.html
+++ b/details.html
@@ -34,8 +34,9 @@
           <td class="stat-label">Card Type:</td>
         </tr>
         <tr class="oracle-text">
-          <td class="stat-label">Rules Text:</td>
+          <!-- <td class="stat-label">Rules Text:</td> -->
         </tr>      
+        <tr class="power-toughness"></tr>
       </table>
     </div>
     <br/>
