--- a/details.html
+++ b/details.html
@@ -20,26 +20,27 @@
   </head>
   <body id="detailPage">
     <header></header>
-    <!-- <h2 id="cardName"></h2> -->
-    <div class="displayBox">
-      <div class="imgContainer">
-        <img class="detailImg" />
+    <div id="card-front">
+      <div class="displayBox mainImage">
+        <div class="imgContainer">
+          <img class="detailImg" />
+        </div>
+      </div>
+      <div class="displayBox stat-box">
+        <table class="stat-table">
+          <tr class="mana-cost"></tr>
+          <tr class="type-line">
+            <td class="stat-label">Card Type:</td>
+          </tr>
+          <tr class="oracle-text"></tr>
+          <tr class="power-toughness"></tr>
+        </table>
       </div>
     </div>
-    <div class="displayBox stat-box">
-      <table class="stat-table">
-        <tr class="mana-cost">
-        </tr>
-        <tr class="type-line">
-          <td class="stat-label">Card Type:</td>
-        </tr>
-        <tr class="oracle-text">
-          <!-- <td class="stat-label">Rules Text:</td> -->
-        </tr>      
-        <tr class="power-toughness"></tr>
-      </table>
+    <br />
+    <div id="card-back">
+      <div class="displayBox"></div>
     </div>
-    <br/>
     <div class="displayBox linkBox"></div>
     <footer></footer>
   </body>
