tweaks to styling & text rendering

--- a/details.html
+++ b/details.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica&family=Poiret+One&family=Uncial+Antiqua&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.7.0.js"
-      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="js/details.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body id="detailPage">
-    <header></header>
-    <div id="card-front">
-      <div class="displayBox mainImage">
-        <div class="imgContainer">
-          <img class="detailImg" />
-        </div>
-      </div>
-      <div class="displayBox stat-box">
-        <table class="stat-table">
-          <tr class="mana-cost"></tr>
-          <tr class="type-line">
-            <td class="stat-label">Card Type:</td>
-          </tr>
-          <tr class="oracle-text"></tr>
-          <tr class="power-toughness"></tr>
-        </table>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica&family=Poiret+One&family=Uncial+Antiqua&display=swap" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+  <script defer src="js/details.js"></script>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body id="detailPage">
+  <header></header>
+  <div id="card-front">
+    <div class="displayBox mainImage">
+      <div class="imgContainer">
+        <img class="detailImg" />
       </div>
     </div>
-    <br />
-    <div id="card-back">
-      <div class="displayBox"></div>
+    <div class="displayBox stat-box">
+      <table class="stat-table">
+        <tr class="mana-cost"></tr>
+        <tr class="type-line"></tr>
+        <tr class="oracle-text"></tr>
+        <tr class="power-toughness"></tr>
+      </table>
     </div>
-    <div class="displayBox linkBox"></div>
-    <footer></footer>
-  </body>
+  </div>
+  <br />
+  <div id="card-back">
+    <div class="displayBox"></div>
+  </div>
+  <div class="displayBox linkBox"></div>
+  <footer></footer>
+</body>
+
 </html>
